<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyBasicAppComponents</string>
    
    <string name="res_value_folder">values</string>
    <!-- For permission sample -->
    <string name="request_permission_title">Request Permssion</string>
    <string name="request_permission_content">Tap to enter allow extra permission.</string>
    <string name="missing_required_permission">You have disabled a required permission.</string>

    <!-- For ContentProvider -->
    <string name="action_settings">Settings</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="add">Add a new Birthday</string>
    <string name="show">Show all Birthdays</string>
    <string name="delete">Delete all Birthdays</string>


    <!-- The user visible name of ExoPlayer. [CHAR LIMIT=20] -->
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <!-- SearchableDictionary -->
        <!-- The label for use as a searchable item -->
        <string name="search_label">Dictionary</string>
        <!-- The hint text that appears in the search box. -->
        <string name="search_hint">Search the dictionary</string>
        <!-- The menu entry that invokes search. -->
        <string name="menu_search">Search</string>
        <!-- The description that will show up in the search settings for this source.  -->
        <string name="settings_description">Definitions of words</string>
        <!-- General instructions in the dict_searchabledict_activity activity. -->
        <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>
        <!-- Shown above search results when we receive a search request. -->
        <plurals name="search_results">
            <item quantity="one">%1$d result for \"%2$s\": </item>
            <item quantity="other">%1$d results for \"%2$s\": </item>
        </plurals>
        <!-- Search failure message. -->
        <string name="no_results">No results found for \"%s\"</string>

    <!-- DebugMsg -->
    <string name="accessibility_description">this app needs accessibility service for Go Back and Pull Down Notification on Samsung Lollipop system</string>


    <string name="my_text_string">Hello world!</string>
    <string name="my_button_default">Set Default</string>
    <string name="my_button_apply_mytheme">Apply My Theme</string>

    <string name="google_maps_api_key">AIzaSyCRQUH9qSXGslHFRv-SsOjOomgF4gdXllI</string>


    <!-- Bluetooth Chat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Bluetooth BLE GATT -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
    <!-- Bluetooth Advertisement -->
    <string name="btadv_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
    <string name="btadv_activity_title">Nearby Devices</string>
    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>

    <!-- BT generic Activity -->
    <string name="bt_action_settings">Settings</string>
    <string name="bt_on">Turn On</string>
    <string name="bt_off">Turn Off</string>
    <string name="bt_Visible">Get Visible</string>
    <string name="bt_List">List Devices</string>


    <!-- Tile Game -->
    <string name="about_text">Tile game example using Android canvas.</string>
    <string name="about_open_source">The code used to create this example is open-source:</string>
    <string name="about_link">http://ruscoe.org/code/</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_shortcut">a</string>
    <string name="exit_shortcut">x</string>

</resources>
