<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bt_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick_BtButtons"
                android:text="@string/bt_on" />
            <Button
                android:id="@+id/bt_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick_BtButtons"
                android:text="@string/bt_off" />
            <Button
                android:id="@+id/bt_Visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick_BtButtons"
                android:text="@string/bt_Visible" />
            <Button
                android:id="@+id/bt_List"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick_BtButtons"
                android:text="@string/bt_List" />



            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

            </ListView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>