<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:id="@+id/textView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activity"
                android:id="@+id/ActivityBtn"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Service"
                android:id="@+id/ServiceBtn"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Receiver"
                android:id="@+id/ReceiverBtn"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Broadcast 1->Receiver"
                android:id="@+id/BroadcastBtn"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Received Text"
                android:id="@+id/ReceivedOutputTextView"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add default data into MyProvider"
                android:onClick="addDefaultBirthday"
                android:id="@+id/ProviderBtn"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/birthday" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="addBirthday"
                android:layout_marginTop="10dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnShow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="showAllBirthdays"
                android:text="@string/show" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="deleteAllBirthdays"
                android:text="@string/delete" />
        </LinearLayout>
    </ScrollView>
